<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_radial">

    <com.github.ybq.android.spinkit.SpinKitView

        android:id="@+id/downlading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/shadowColor"
        app:SpinKit_Style="FoldingCube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="310dp"
        android:layout_height="476dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dead_face_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/dead_face"
            app:layout_constraintBottom_toTopOf="@+id/shit_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dead_face" />

        <ImageView
            android:id="@+id/shit_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/shit_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/dead_face_image_view"
            app:layout_constraintStart_toStartOf="@+id/dead_face_image_view"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shit_text" />

        <TextView
            android:id="@+id/no_internet_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:text="@string/no_memes_ar"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/download_button"
            app:layout_constraintEnd_toEndOf="@+id/shit_image_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/shit_image_view"
            app:layout_constraintTop_toBottomOf="@+id/shit_image_view" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/download_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/downloadButton"
            android:fontFamily="@font/cairo_light"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/download_button_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/restore_backup_button"
            app:layout_constraintEnd_toEndOf="@+id/no_internet_text_view"
            app:layout_constraintStart_toStartOf="@+id/no_internet_text_view"
            app:layout_constraintTop_toBottomOf="@+id/no_internet_text_view" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/restore_backup_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingTop="0dp"
            android:backgroundTint="@color/shadowColor"
            android:paddingBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:cornerRadius="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/backup_button_Text"
            android:textColor="@android:color/white"
            android:fontFamily="@font/cairo_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/download_button"
            app:layout_constraintStart_toStartOf="@+id/download_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>